[WIP] BEMify or die trying

--- a/app/styles/addons/ember-calendar/components/_as-calendar.scss
+++ b/app/styles/addons/ember-calendar/components/_as-calendar.scss
@@ -1,8 +1,11 @@
-.as-calendar {
+@include bem-block(as-calendar(selector)) {
   background: color(white);
   border: 1px solid color(border, dark);
 
-  .as-calendar-occurrence.preview {
-    opacity: .7;
+  // move outside
+  @include bem-element('occurrence') {
+    &.preview {
+      opacity: .7;
+    }
   }
 }
