--- a/app/styles/addons/ember-calendar/main.scss
+++ b/app/styles/addons/ember-calendar/main.scss
@@ -1,4 +1,7 @@
 @import 'global';
+@import 'core';
+@import 'settings';
+
 @import 'components/as-calendar';
 @import 'components/as-calendar/header';
 @import 'components/as-calendar/occurrence';
