--- a/app/styles/addons/ember-calendar/components/as-calendar/_header.scss
+++ b/app/styles/addons/ember-calendar/components/as-calendar/_header.scss
@@ -1,39 +1,36 @@
-.as-calendar-header {
+@include bem-block(as-calendar(header, selector)) {
   @extend %grid-row-gutter;
 
   background-color: color(border, light);
   border-bottom: 1px solid color(gray, gainsboro);
 
-  nav,
-  h1 {
-    line-height: rem(80);
-  }
-
-  h1 {
-    @extend %grid-column-6;
-  }
-
-  nav {
+  @include bem-element('nav' 'title') {
     @extend %grid-column-6;
 
+    line-height: as-calendar(header, height);
+  }
+
+  @include bem-element('nav') {
     text-align: right;
+  }
 
-    > ul {
-      @extend %button-group;
-    }
+  @include bem-element('nav-group') {
+    @extend %button-group;
+  }
 
-    .previous-week {
+  @include bem-element('nav-group-item') {
+    @include bem-modifier('previous-week') {
       @include button-icon('caret-left');
     }
 
-    .current-week {
+    @include bem-modifier('next-week') {
+      @include button-icon('caret-right');
+    }
+
+    @include bem-modifier('current-week') {
       &:disabled {
         color: color(border);
       }
-    }
-
-    .next-week {
-      @include button-icon('caret-right');
     }
   }
 }
