--- a/app/templates/components/as-calendar/header.hbs
+++ b/app/templates/components/as-calendar/header.hbs
@@ -1,21 +1,21 @@
-<h1>{{title}}</h1>
+<h1 class="as-calendar-header__title">{{title}}</h1>
 
 {{yield this}}
 
-<nav>
-  <ul>
-    <li>
-      <button class="previous-week" {{action "navigateWeek" -1}}></button>
+<nav class="as-calendar-header__nav">
+  <ul class="as-calendar-header__nav-group">
+    <li class="as-calendar-header__nav-group-item">
+      <button class="as-calendar-header__nav-group-item--previous-week" {{action "navigateWeek" -1}}></button>
     </li>
 
-    <li>
+    <li class="as-calendar-header__nav-group-item">
       <button disabled={{isInCurrentWeek}}
-        class="current-week"
+        class="as-calendar-header__nav-group-item--current-week"
         {{action "goToCurrentWeek"}}>This Week</button>
     </li>
 
-    <li>
-      <button class="next-week" {{action "navigateWeek" 1}}></button>
+    <li class="as-calendar-header__nav-group-item">
+      <button class="as-calendar-header__nav-group-item--next-week" {{action "navigateWeek" 1}}></button>
     </li>
   </ul>
 </nav>
