--- a/app/templates/components/as-calendar/timetable.hbs
+++ b/app/templates/components/as-calendar/timetable.hbs
@@ -1,5 +1,5 @@
-<div class="header columns">
-  <div class="time-zone">
+<div class="as-calendar-timetable__row as-calendar-timetable__row--highlighted">
+  <div class="as-calendar-timetable__first-column time-zone">
     {{as-calendar/time-zone-select
       value=timeZone
       options=timeZoneOptions
@@ -8,27 +8,27 @@
       onChangeValue="changeTimeZone"}}
   </div>
 
-  <div class="day-labels">
+  <div class="as-calendar-timetable__columns day-labels">
     <ul>
       {{#each days as |day|}}
-        <li class={{if day.isToday "today"}}>{{moment-format day.value "ddd D MMM"}}</li>
+        <li class="as-calendar-timetable__column-item {{if day.isToday "as-calendar-timetable__column-item--highlighted today"}}">{{moment-format day.value "ddd D MMM"}}</li>
       {{/each}}
     </ul>
   </div>
 </div>
 
-<div class="content-wrapper">
-  <div class="header rows">
-    <ul class="time-slot-labels" style={{timeSlotLabelListStyle}}>
+<div class="as-calendar-timetable__row">
+  <div class="as-calendar-timetable__first-column">
+    <ul class="as-calendar-timetable__slot-labels" style={{timeSlotLabelListStyle}}>
       {{#each labeledTimeSlots as |timeSlot|}}
-        <li style={{timeSlotLabelStyle}}>
+        <li class="as-calendar-timetable__slot-label" style={{timeSlotLabelStyle}}>
           {{moment-format timeSlot.value "h A"}}
         </li>
       {{/each}}
     </ul>
   </div>
 
-  <div class="content">
+  <div class="as-calendar-timetable__columns">
     {{#as-calendar/timetable/content
       timeSlotHeight=timeSlotHeight
       model=model
