BEMify the occurrence component

--- a/app/styles/addons/ember-calendar/_core.scss
+++ b/app/styles/addons/ember-calendar/_core.scss
@@ -40,7 +40,7 @@ $bem-modifier-separator: '--';
     @at-root {
       #{$selector} {
         @each $element in $elements {
-          #{$block+$bem-element-separator+$element} {
+          .#{$block+$bem-element-separator+$element} {
             @content;
           }
         }
