--- a/app/styles/addons/ember-calendar/components/as-calendar/_occurrence.scss
+++ b/app/styles/addons/ember-calendar/components/as-calendar/_occurrence.scss
@@ -1,4 +1,4 @@
-.as-calendar-occurrence {
+@include bem-block(as-calendar(occurrence, selector)) {
   background-color: rgba(color(alert), .8);
   border-left: 2px solid color(alert, dark);
   color: color(white);
@@ -7,12 +7,16 @@
   position: absolute;
   right: 0;
 
-  > div {
+  @include bem-modifier('preview') {
+    opacity: .7;
+  }
+
+  @include bem-element('container') {
     height: 100%;
     position: relative;
   }
 
-  h1 {
+  @include bem-element('title') {
     color: color(white);
     font-size: .9rem;
     font-weight: $font-weight-extrabold;
