--- a/app/templates/components/as-calendar.hbs
+++ b/app/templates/components/as-calendar.hbs
@@ -31,7 +31,7 @@
     {{#if day.occurrencePreview}}
       <li>
         {{as-calendar/occurrence
-          class="preview"
+          class="as-calendar-occurrence--preview"
           model=day.occurrencePreview
           timeSlotHeight=timeSlotHeight
           timeSlotDuration=timeSlotDuration}}
