--- a/app/styles/addons/ember-calendar/components/as-calendar/timetable/_occurrence.scss
+++ b/app/styles/addons/ember-calendar/components/as-calendar/timetable/_occurrence.scss
@@ -1,33 +1,35 @@
-.as-calendar-timetable-occurrence {
-  .resize-handle {
-    bottom: 0;
-    cursor: ns-resize;
-    height: rem(8);
-    left: 0;
-    position: absolute;
-    right: 0;
-  }
-
-  &:hover {
-    .remove {
-      opacity: 1;
-    }
-  }
-
-  .remove {
-    @include icon(times);
-
-    color: color(white);
-    opacity: 0;
-    position: absolute;
-    right: 0;
-    top: $column-gutter / 8;
-    transition: color $global-transition-duration / 2 linear,
-      opacity $global-transition-duration / 2 linear;
-
+@include bem-block(as-calendar(occurrence, selector)) {
+  @include bem-modifier('timetable') {
     &:hover {
-      background-color: transparent;
-      color: color(alert, dark);
+      @include bem-element('remove') {
+        opacity: 1;
+      }
+    }
+
+    @include bem-element('resize-handle') {
+      bottom: 0;
+      cursor: ns-resize;
+      height: rem(8);
+      left: 0;
+      position: absolute;
+      right: 0;
+    }
+
+    @include bem-element('remove') {
+      @include icon(times);
+
+      color: color(white);
+      opacity: 0;
+      position: absolute;
+      right: 0;
+      top: $column-gutter / 8;
+      transition: color $global-transition-duration / 2 linear,
+        opacity $global-transition-duration / 2 linear;
+
+      &:hover {
+        background-color: transparent;
+        color: color(alert, dark);
+      }
     }
   }
 }
