Load button-icon icons

--- a/app/styles/addons/ember-calendar/components/as-calendar/_header.scss
+++ b/app/styles/addons/ember-calendar/components/as-calendar/_header.scss
@@ -20,11 +20,11 @@
 
   @include bem-element('nav-group-item') {
     @include bem-modifier('previous-week') {
-      @include button-icon('caret-left');
+      @include icon('caret-left');
     }
 
     @include bem-modifier('next-week') {
-      @include button-icon('caret-right');
+      @include icon('caret-right');
     }
 
     @include bem-modifier('current-week') {
