Update font family, sizes and cursors

--- a/app/styles/addons/ember-calendar/components/as-calendar/_timetable.scss
+++ b/app/styles/addons/ember-calendar/components/as-calendar/_timetable.scss
@@ -9,6 +9,7 @@
       font-weight: $font-weight-bold;
       padding: $column-gutter / 3 0;
       text-align: center;
+      z-index: 1;
     }
   }
 
