--- a/app/styles/addons/ember-calendar/components/as-calendar/timetable/_occurrence.scss
+++ b/app/styles/addons/ember-calendar/components/as-calendar/timetable/_occurrence.scss
@@ -13,6 +13,7 @@
       @include icon(times);
 
       color: color(white);
+      cursor: pointer;
       opacity: 0;
       position: absolute;
       right: 0;
