--- a/tests/dummy/app/styles/_paint-settings.scss
+++ b/tests/dummy/app/styles/_paint-settings.scss
@@ -3,6 +3,7 @@
 @import 'bower_components/fontawesome/scss/mixins';
 @import 'bower_components/fontawesome/scss/icons';
 
+$base-font-family: "Helvetica Neue", Helvetica, sans-serif;
 $base-font-size: 14px;
 $base-line-height: 1.5;
 $heading-line-height: 1.5;
