--- a/tests/dummy/app/styles/app.scss
+++ b/tests/dummy/app/styles/app.scss
@@ -3,6 +3,7 @@
 
 html {
   box-sizing: border-box;
+  font-size: $base-font-size;
 }
 *, *:before, *:after {
   box-sizing: inherit;
@@ -11,6 +12,7 @@ html {
 body {
   background-color: color(gray, iron);
   cursor: inherit;
+  font-family: $base-font-family;
   padding: $column-gutter;
 
   .as-calendar {
