--- a/app/templates/components/as-calendar/header.hbs
+++ b/app/templates/components/as-calendar/header.hbs
@@ -5,17 +5,17 @@
 <nav class="as-calendar-header__nav">
   <ul class="as-calendar-header__nav-group">
     <li class="as-calendar-header__nav-group-item">
-      <button class="as-calendar-header__nav-group-item--previous-week" {{action "navigateWeek" -1}}></button>
+      <button class="as-calendar-header__nav-group-action as-calendar-header__nav-group-action--previous-week" {{action "navigateWeek" -1}}></button>
     </li>
 
     <li class="as-calendar-header__nav-group-item">
       <button disabled={{isInCurrentWeek}}
-        class="as-calendar-header__nav-group-item--current-week"
+        class="as-calendar-header__nav-group-action as-calendar-header__nav-group-action--current-week"
         {{action "goToCurrentWeek"}}>This Week</button>
     </li>
 
     <li class="as-calendar-header__nav-group-item">
-      <button class="as-calendar-header__nav-group-item--next-week" {{action "navigateWeek" 1}}></button>
+      <button class="as-calendar-header__nav-group-action as-calendar-header__nav-group-action--next-week" {{action "navigateWeek" 1}}></button>
     </li>
   </ul>
 </nav>
