Update dropdown styles

--- a/app/styles/addons/ember-calendar/components/as-calendar/_time-zone-select.scss
+++ b/app/styles/addons/ember-calendar/components/as-calendar/_time-zone-select.scss
@@ -37,11 +37,11 @@
     box-shadow: 0 2px 3px rgba(0, 0, 0, .175);
     display: none;
     float: left;
-    font-size: $base-font-size;
+    font-size: $small-font-size;
     left: 0;
     list-style: none;
     margin: 0;
-    min-width: 100px;
+    min-width: 200px;
     position: absolute;
     text-align: left;
     top: 100%;
@@ -86,7 +86,6 @@
         line-height: dropdown-settings(search, icon-size);
         margin: dropdown-settings(search, padding-inner) * 2 0;
         padding-left: dropdown-settings(search, icon-size);
-        width: 100%;
       }
     }
 
