--- a/app/styles/addons/ember-calendar/_global.scss
+++ b/app/styles/addons/ember-calendar/_global.scss
@@ -1,3 +1,11 @@
+html {
+  box-sizing: border-box;
+  font-size: $base-font-size;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
 body {
   cursor: inherit;
 }
