--- a/app/styles/addons/ember-calendar/_global.scss
+++ b/app/styles/addons/ember-calendar/_global.scss
@@ -2,7 +2,10 @@ html {
   box-sizing: border-box;
   font-size: $base-font-size;
 }
-*, *:before, *:after {
+
+*,
+*:before,
+*:after {
   box-sizing: inherit;
 }
 
