--- a/app/styles/addons/ember-calendar/components/as-calendar/_header.scss
+++ b/app/styles/addons/ember-calendar/components/as-calendar/_header.scss
@@ -10,6 +10,12 @@
     line-height: as-calendar(header, height);
   }
 
+  @include bem-element('title') {
+    font-size: rem(30);
+    font-weight: $font-weight-normal;
+    padding-left: $column-gutter;
+  }
+
   @include bem-element('nav') {
     text-align: right;
   }
@@ -30,6 +36,8 @@
     }
 
     @include bem-modifier('current-week') {
+      text-transform: uppercase;
+
       &:disabled {
         color: color(border);
       }
