--- a/app/templates/components/as-calendar/timetable.hbs
+++ b/app/templates/components/as-calendar/timetable.hbs
@@ -1,5 +1,5 @@
 <div class="as-calendar-timetable__row as-calendar-timetable__row--highlighted">
-  <div class="as-calendar-timetable__first-column time-zone">
+  <div class="as-calendar-timetable__first-column">
     {{as-calendar/time-zone-select
       value=timeZone
       options=timeZoneOptions
@@ -8,10 +8,12 @@
       onChangeTimeZone=(action this.attrs.onChangeTimeZone)}}
   </div>
 
-  <div class="as-calendar-timetable__columns day-labels">
+  <div class="as-calendar-timetable__columns">
     <ul>
       {{#each days as |day|}}
-        <li class="as-calendar-timetable__column-item {{if day.isToday "as-calendar-timetable__column-item--highlighted today"}}">{{moment-format day.value "ddd D MMM"}}</li>
+        <li class="as-calendar-timetable__column-item {{if day.isToday "as-calendar-timetable__column-item--highlighted"}}">
+          {{moment-format day.value "ddd D MMM"}}
+        </li>
       {{/each}}
     </ul>
   </div>
