Update occurence remove icon styles

--- a/app/styles/addons/ember-calendar/components/as-calendar/timetable/_occurrence.scss
+++ b/app/styles/addons/ember-calendar/components/as-calendar/timetable/_occurrence.scss
@@ -23,13 +23,13 @@
 
       &:hover {
         background-color: transparent;
-        color: color(alert, dark);
+        opacity: 1 !important;
       }
     }
 
     &:hover {
       @include bem-element('remove') {
-        opacity: 1;
+        opacity: .65;
       }
     }
   }
