Make global css resets specific to the calendar component and also optional

--- a/app/styles/addons/ember-calendar/components/as-calendar/_header.scss
+++ b/app/styles/addons/ember-calendar/components/as-calendar/_header.scss
@@ -14,6 +14,7 @@
     font-size: rem(30);
     font-weight: $font-weight-normal;
     padding-left: $column-gutter;
+    margin: 0;
   }
 
   @include bem-element('nav') {
