--- a/app/styles/addons/ember-calendar/components/as-calendar/_occurrence.scss
+++ b/app/styles/addons/ember-calendar/components/as-calendar/_occurrence.scss
@@ -21,5 +21,6 @@
     font-size: .9rem;
     font-weight: $font-weight-extrabold;
     text-shadow: 0 0 1px rgba(0, 0, 0, .25);
+    margin: 0;
   }
 }
