--- a/app/styles/addons/ember-calendar/_settings.scss
+++ b/app/styles/addons/ember-calendar/_settings.scss
@@ -15,6 +15,8 @@ $as-calendar: (
   )
 );
 
+$as-calendar-global-resets: true !default;
+
 @function as-calendar($setting, $property: null) {
   @if $property {
     @return map-get(map-get($as-calendar, $setting), $property);
