Remove the mumbo-jumbo

--- a/app/styles/addons/ember-calendar/components/_as-calendar.scss
+++ b/app/styles/addons/ember-calendar/components/_as-calendar.scss
@@ -12,9 +12,7 @@
     }
 
     ul,
-    li,
-    ul li ul,
-    ul li ul li {
+    li {
       list-style-type: none;
       margin: 0;
       padding: 0;
