--- a/app/styles/addons/ember-calendar/_core.scss
+++ b/app/styles/addons/ember-calendar/_core.scss
@@ -3,7 +3,8 @@ $bem-modifier-separator: '--';
 
 @function _bem-selector-to-string($selector) {
   $selector: inspect($selector);
-  $selector: str-slice($selector, 2, -2);
+  $dot-index: str-index($selector, '.') + 1;
+  $selector: str-slice($selector, $dot-index, -1);
 
   @return $selector;
 }
@@ -11,7 +12,7 @@ $bem-modifier-separator: '--';
 @function _bem-selector-has-modifier($selector) {
   $selector: _bem-selector-to-string($selector);
 
-  @if str-index($selector, $bem-modifier-separator) {
+  @if str-index($selector, $bem-modifier-separator) or str-index($selector, ':') {
     @return true;
   } @else {
     @return false;
@@ -20,7 +21,13 @@ $bem-modifier-separator: '--';
 
 @function _bem-get-block-name($selector) {
   $selector: _bem-selector-to-string($selector);
-  $modifier-start: str-index($selector, $bem-modifier-separator) - 1;
+  $modifier-separator: $bem-modifier-separator;
+
+  @if str-index($selector, ':') {
+    $modifier-separator: ':';
+  }
+
+  $modifier-start: str-index($selector, $modifier-separator) - 1;
 
   @return str-slice($selector, 0, $modifier-start);
 }
