--- a/app/templates/components/as-calendar/timetable/occurrence.hbs
+++ b/app/templates/components/as-calendar/timetable/occurrence.hbs
@@ -2,7 +2,7 @@
   {{#if hasBlock}}
     {{yield}}
   {{else}}
-    <h1 class="as-calendar-occurrence__title" style={{titleStyle}}>{{title}}</h1>
+    <h1 class="as-calendar-occurrence__title">{{title}}</h1>
   {{/if}}
 
   {{#unless isInteracting}}
