Remove unnecessary log. Remove text decoration from month day link. Stop bubbling month day selection action.

--- a/app/styles/addons/ember-calendar/components/as-calendar/_timetable.scss
+++ b/app/styles/addons/ember-calendar/components/as-calendar/_timetable.scss
@@ -131,6 +131,7 @@
     @include bem-element('day-name') {
       margin: 5px;
       color: #888888;
+      text-decoration: none;
     }
 
     .as-calendar-occurrence--timetable {
