--- a/app/templates/components/as-calendar/timetable/content.hbs
+++ b/app/templates/components/as-calendar/timetable/content.hbs
@@ -10,7 +10,7 @@
   {{#each days as |day|}}
     <li class="as-calendar-timetable__day {{if day.isToday "as-calendar-timetable__day--today"}} {{if day.isOutOfPeriod "as-calendar-timetable__day--out-of-period"}}">
       {{#if model.isMonthView}}
-        <p class="as-calendar-timetable__day-name" {{action 'goTo' day.value}}>{{moment-format day.value "D"}}</p>
+        <a href class="as-calendar-timetable__day-name" {{action 'goTo' day.value bubbles=false}}>{{moment-format day.value "D"}}</a>
       {{/if}}
 
       {{yield day this}}
